# fx_recommender

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  streamlit_app.py
models/latest/: metadata.json  model.json  preprocessor.json  weights.npz
src/: api.py  data.py  evaluate.py  modeling.py  predict.py  train_pipeline.py
